<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingLeft="30dp"
    android:paddingTop="30dp"
    android:paddingEnd="30dp">

    <TextView
        android:id="@+id/detailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/create_playlist"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/playlistText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:maxLength="100"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/dumy_text_song"
        android:textColor="#BA000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailText"
        app:layout_constraintTop_toBottomOf="@+id/detailText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:text="@string/ok"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/playlistText"
        app:layout_constraintTop_toBottomOf="@+id/playlistText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/playlistText"
        app:layout_constraintEnd_toStartOf="@+id/okButton"
        app:layout_constraintTop_toBottomOf="@+id/playlistText" />


</androidx.constraintlayout.widget.ConstraintLayout>